# vkml-runtime

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-multi-platform.yml
inc/: app.h  barrier.h  buffer.h  buffer_allocator.h  buffer_view.h  compute_packet.h  compute_program.h  config.h  debug_utils.h  descriptor_allocator.h  descriptor_cache.h  descriptor_layout_cache.h  descriptor_manager.h  device.h  device_features.h  dispatch_builder.h  error_handling.h  image.h  image_allocator.h  image_view.h  logging.h  memory_manager.h  program.h  queue.h  queue_dispatcher.h  queue_manager.h  runtime.h  shader_module.h  sparse_buffer.h  storage.h  version.h  video.h
inc/experimental/: graph.h
inc/inc/: vka.h  vkc.h  vkd.h  vke.h  vkt.h
lib/: CMakeLists.txt  app.cpp  barrier.cpp  buffer.cpp  buffer_allocator.cpp  buffer_view.cpp  compute_program.cpp  descriptor_allocator.cpp  descriptor_layout_cache.cpp  descriptor_manager.cpp  device.cpp  device_features.cpp  dispatch_builder.cpp  logging.cpp  memory_manager.cpp  program.cpp  queue.cpp  queue_manager.cpp  runtime.cpp  shader_module.cpp  sparse_buffer.cpp  storage.cpp  vkd.cpp  vkrt.cpp  volk_impl.cpp
lib/inc/: vk_buffer.h  vk_device.h  vk_instance.h  vk_pgrm.h  vka.h  vkb.h  vkc.h  vkd.h  vke.h  vkrt.h  vkt.h
src/: CMakeLists.txt  runtime.cpp
src/inc/: runtime.h  vka.h  vkb.h  vkc.h  vkd.h  vks.h
test/: CMakeLists.txt  comp.spv  init.cpp  rt.cpp  square.comp  square.cpp  square.h  ssprgm.cpp  test_device.cpp  test_logging.cpp  test_program.cpp  test_runtime.cpp  test_shader.cpp  test_storage.cpp  test_utils.cpp  test_utils.h
test/common/: CMakeLists.txt  test_utils.hpp
test/unit/: device_test.cpp  program_test.cpp  program_test_simple.cpp  queue_test.cpp  runtime_test.cpp  storage_test.cpp
